[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "dagshub_demo"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
dagshub-demo = "dagshub_demo.__main__:main"

[tool.kedro]
package_name = "dagshub_demo"
project_name = "dagshub_demo"
kedro_init_version = "0.19.3"
tools = [ "Linting", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "dagshub_demo.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
